kubernetes/keycloak/istio-oauth2-keycloak/oauth2-proxy-virtualservice.template.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: oauth2-proxy
spec:
  gateways:
    - istio-system/all-hosts
  hosts:
    - ${KEYCLOAK_HOSTNAME}
  http:
    - match:
      - uri:
          prefix: /oauth2
      route:
        - destination:
            host: oauth2-proxy
            port:
              number: 80
      headers:
        request:
          set:
            x-forwarded-proto: https
